RESOLVED FIXED106310
[Qt][Mac] GraphicsSurface does not need glEnable/glDisable for texture targets.
https://bugs.webkit.org/show_bug.cgi?id=106310
Summary [Qt][Mac] GraphicsSurface does not need glEnable/glDisable for texture targets.
Zeno Albisser
Reported 2013-01-08 00:13:51 PST
[Qt][Mac] GraphicsSurface does not need glEnable/glDisable for texture targets.
Attachments
Patch (2.86 KB, patch)
2013-01-08 00:17 PST, Zeno Albisser
no flags
Zeno Albisser
Comment 1 2013-01-08 00:17:21 PST
Zeno Albisser
Comment 2 2013-01-09 03:26:33 PST
Comment on attachment 181663 [details] Patch Clearing flags on attachment: 181663 Committed r139182: <http://trac.webkit.org/changeset/139182>
Zeno Albisser
Comment 3 2013-01-09 03:26:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.