[Qt][Mac] GraphicsSurface does not need glEnable/glDisable for texture targets. https://bugs.webkit.org/show_bug.cgi?id=106310

glEnable/glDisable for texture targets is only necessary
when using the fixed function pipeline.
Enabling or disabling the target might cause unexpected
behavior to texture bindings and is therefore considered harmful.

Reviewed by Noam Rosenthal.

* platform/graphics/surfaces/mac/GraphicsSurfaceMac.cpp:
(WebCore::createTexture):
(WebCore::GraphicsSurfacePrivate::copyFromTexture):
(WebCore::GraphicsSurface::platformCopyToGLTexture):

Canonical link: https://commits.webkit.org/124631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139182 268f45cc-cd09-0410-ab3c-d52691b4dbfc